<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_weight="10"
    tools:context="ra17_2014.pnrs1.rtrk.taskmanager.taskmanager.CreateTask">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:id="@+id/TaskData"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/taskName"
            android:textAlignment="center"
            android:id="@+id/taskName"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/TaskTimeAndDate"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:text="@string/setDate"
                android:id="@+id/setDate"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/setTime"
                android:id="@+id/setTime"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/taskDescription"
            android:textAlignment="center"
            android:lines="11"
            android:hint="@string/description"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/CheckBoxLayout"
        android:layout_weight="1">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Checkbox"
            android:id="@+id/checkBox"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PriorityTextView"
        android:text="@string/setPriority"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/PriorityButtons"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:textAllCaps="false"
            android:background="@color/priorityHigh"
            android:text="@string/high"
            android:id="@+id/Red"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:textAllCaps="false"
            android:background="@color/priorityMedium"
            android:text="@string/medium"
            android:id="@+id/Yellow"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:textAllCaps="false"
            android:background="@color/priorityLow"
            android:text="@string/low"
            android:id="@+id/Green"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/EndButtons"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/add"
            android:id="@+id/leftButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/cancel"
            android:id="@+id/rightButton"/>
    </LinearLayout>



</LinearLayout>
