<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ra17_2014.pnrs1.rtrk.taskmanager.taskmanager.ViewStatistics">

    <ra17_2014.pnrs1.rtrk.taskmanager.taskmanager.PieChart
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/highPie"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highRatio"
        android:textSize="25dp"
        android:id="@+id/HighPriorityText"
        android:layout_below="@+id/highPie"
        android:layout_centerHorizontal="true"/>

    <ra17_2014.pnrs1.rtrk.taskmanager.taskmanager.PieChart
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/HighPriorityText"
        android:layout_alignParentLeft="true"
        android:id="@+id/mediumPie"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mediumPie"
        android:text="@string/mediumRatio"
        android:textSize="25dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/MediumPriorityText"
        />

    <ra17_2014.pnrs1.rtrk.taskmanager.taskmanager.PieChart
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/HighPriorityText"
        android:layout_alignParentRight="true"
        android:id="@+id/lowPie"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lowPie"
        android:text="@string/lowRatio"
        android:textSize="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textAllCaps="false"
        android:text="@string/backToMainScreen"
        android:id="@+id/backToMain"/>


</RelativeLayout>
